--- a/public/ai.html
+++ b/public/ai.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>AI Video Export</title>
+<title>AI Video Generator</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
@@ -13,52 +13,89 @@ body{
   padding:20px;
 }
 .app{
-  max-width:420px;
+  max-width:900px;
   margin:auto;
 }
+.page{
+  border:1px solid #1e293b;
+  border-radius:14px;
+  padding:14px;
+  margin-bottom:14px;
+}
+input, textarea{
+  width:100%;
+  padding:10px;
+  margin-top:6px;
+  background:#020617;
+  border:1px solid #334155;
+  color:#e5e7eb;
+  border-radius:8px;
+}
+button{
+  padding:12px;
+  font-weight:800;
+  border-radius:10px;
+  cursor:pointer;
+}
+.add{ background:#16a34a; color:#fff; }
+.generate{ background:#2563eb; color:#fff; width:100%; margin-top:14px; }
+
 canvas{
   width:100%;
   aspect-ratio:9/16;
   background:#000;
   border-radius:14px;
-}
-button{
-  width:100%;
-  margin-top:10px;
-  padding:12px;
-  font-weight:800;
-  background:#2563eb;
-  color:#fff;
-  border-radius:10px;
-  cursor:pointer;
+  margin-top:20px;
 }
 </style>
 </head>
 <body>
 
 <div class="app">
+  <h1>AI Video Generator</h1>
+
+  <label>Music URL (mp3)</label>
+  <input id="musicUrl" placeholder="https://..." />
+
+  <div id="pages"></div>
+
+  <button class="add" onclick="addPage()">➕ Add Page</button>
+  <button class="generate" onclick="start()">🎬 Create Video</button>
+
   <canvas id="canvas"></canvas>
-  <button onclick="renderAndRecord()">🎬 Generate Video</button>
 </div>
 
 <script>
-/* ================== CONFIG ================== */
 const FPS = 30;
-
-/* Replace this with fetch('/api/ai-video') result */
-const VIDEO_DATA = YOUR_API_JSON_RESPONSE;
-
-/* ============================================ */
+let pageIndex = 0;
 
 const canvas = document.getElementById("canvas");
 const ctx = canvas.getContext("2d");
-canvas.width = VIDEO_DATA.width;
-canvas.height = VIDEO_DATA.height;
 
-/* ---------- Load Audio ---------- */
-const audio = new Audio(VIDEO_DATA.audio);
+/* ---------- PAGE UI ---------- */
+function addPage(){
+  const div = document.createElement("div");
+  div.className = "page";
+  div.innerHTML = `
+    <h3>Page ${++pageIndex}</h3>
+    <textarea placeholder="Page text"></textarea>
+    <input type="number" value="4" min="1" placeholder="Duration (sec)">
+    <input type="file" multiple accept="image/*">
+  `;
+  pages.appendChild(div);
+}
+addPage();
 
-/* ---------- Render SVG to Canvas ---------- */
+/* ---------- UTIL ---------- */
+function fileToBase64(file){
+  return new Promise(res=>{
+    const r = new FileReader();
+    r.onload = ()=>res(r.result);
+    r.readAsDataURL(file);
+  });
+}
+
+/* ---------- SVG DRAW ---------- */
 function drawSVG(svg){
   return new Promise(res=>{
     const img = new Image();
@@ -72,48 +109,76 @@ function drawSVG(svg){
   });
 }
 
-/* ---------- Main Render + Record ---------- */
-async function renderAndRecord(){
-  const stream = canvas.captureStream(FPS);
-  const audioStream = audio.captureStream();
+/* ---------- MAIN FLOW ---------- */
+async function start(){
+  const pages = [];
+  const nodes = document.querySelectorAll(".page");
 
-  audioStream.getTracks().forEach(t=>stream.addTrack(t));
+  for (const n of nodes){
+    const text = n.querySelector("textarea").value;
+    const duration = Number(n.querySelector("input[type=number]").value);
+    const files = n.querySelector("input[type=file]").files;
 
-  const recorder = new MediaRecorder(stream, {
-    mimeType: "video/webm; codecs=vp9"
+    const images = [];
+    for (const f of files){
+      images.push(await fileToBase64(f));
+    }
+
+    pages.push({ text, duration, images });
+  }
+
+  const payload = {
+    ratio: "9:16",
+    theme: { cardColor:"#0b0f1a", textColor:"#ffffff" },
+    user: { username:"User" },
+    song: {
+      title:"AI Song",
+      artist:"Generator",
+      musicUrl: document.getElementById("musicUrl").value,
+      clipStart:0,
+      clipEnd:30
+    },
+    pages
+  };
+
+  const res = await fetch("/api/ai-video",{
+    method:"POST",
+    headers:{ "Content-Type":"application/json" },
+    body: JSON.stringify(payload)
   });
 
+  const VIDEO = await res.json();
+
+  canvas.width = VIDEO.width;
+  canvas.height = VIDEO.height;
+
+  const audio = new Audio(VIDEO.audio);
+
+  const stream = canvas.captureStream(FPS);
+  audio.captureStream().getTracks().forEach(t=>stream.addTrack(t));
+
+  const recorder = new MediaRecorder(stream,{ mimeType:"video/webm;codecs=vp9" });
   const chunks = [];
-  recorder.ondataavailable = e => chunks.push(e.data);
+  recorder.ondataavailable = e=>chunks.push(e.data);
 
   recorder.start();
   audio.play();
 
-  for (const frame of VIDEO_DATA.frames){
-    const frameCount = frame.duration * FPS;
-    for (let i=0;i<frameCount;i++){
+  for (const frame of VIDEO.frames){
+    for (let i=0;i<frame.duration*FPS;i++){
       await drawSVG(frame.svg);
-      await wait(1000/FPS);
+      await new Promise(r=>setTimeout(r,1000/FPS));
     }
   }
 
   recorder.stop();
-
   recorder.onstop = ()=>{
     const blob = new Blob(chunks,{type:"video/webm"});
-    download(blob,"ai-video.webm");
+    const a = document.createElement("a");
+    a.href = URL.createObjectURL(blob);
+    a.download = "ai-video.webm";
+    a.click();
   };
-}
-
-function wait(ms){
-  return new Promise(r=>setTimeout(r,ms));
-}
-
-function download(blob,name){
-  const a = document.createElement("a");
-  a.href = URL.createObjectURL(blob);
-  a.download = name;
-  a.click();
 }
 </script>
 
